v20.04/en/_sources/installation.rst.txt
Installation

Warning: The instructions on

  Safety

   related to the

  rc_visard

   must be read and understood prior to installation.

Installation and configuration

The

rc_visard

 offers a Gigabit Ethernet interface for connecting the device to a
computer network. All communications to and from the device are
performed via this interface. The

rc_visard

 has an on-board computing resource that requires booting time after
powering up the device.

Software license

Every

rc_visard

 device ships with a pre-installed license file for licensing and
protection of the installed software packages. The license is bound to
that specific

rc_visard

 device and cannot be used or transferred to other devices.

The functionality of the

rc_visard

 can be enhanced anytime by

upgrading the license

, e.g., for optionally available software components.

Note: The

  rc_visard

   requires to be rebooted whenever the installed licenses have
  changed.

Note: The license status can be retrieved via the

  rc_visard

  's various interfaces such as the

  System

   tab of the

  Web GUI

  .

Power up

Note: Always fully connect and tighten the M12 power connector on
  the

  rc_visard


  before

   turning on the power supply.

After connecting the

rc_visard

 to the power, the LED on the front of the device should immediately
illuminate. During the device's boot process, the LED will change
color and will eventually turn green. This signals that all processes
are up and running.

If the network is not plugged in or the network is not properly
configured, then the LED will flash red every 5 seconds. In this case,
the device's network configuration should be verified. See

LED colors

 for more information on the LED color codes.

Discovery of rc_visard devices

Roboception devices that are powered up and connected to the local
network or directly to a computer can be found using the standard GigE
Vision® discovery mechanism.

Roboception offers the open-source tool "rcdiscover-gui", which can be
downloaded free of charge from

http://www.roboception.com/download

 for Windows and Linux. The tool's Windows version consists of a
single executable for Windows 7 and Windows 10, which can be executed
without installation. For Linux an installation package is available
for Ubuntu.

At startup, all available GigE Vision® devices -- including

rc_visard

 devices -- are listed with their names, serial numbers, current IP
addresses, and unique MAC addresses. The discovery tool finds all
devices reachable by global broadcasts. Misconfigured devices that are
located in different subnets than the application host may also be
listed. A tickmark in the discovery tool indicates whether devices are
actually reachable via a web browser.


After successful discovery, a double click on the device row opens the

Web GUI

 of the device in the operating system's default web browser. Google
Chrome or Mozilla Firefox is recommended as web browser.

Resetting configuration

A misconfigured device can be reset by using the

Reset rc_visard

 button in the discovery tool. The reset mechanism is only available
for two minutes after device startup. Thus, the

rc_visard

 may require rebooting before being able to reset the device.


If the discovery tool still successfully detects the the misconfigured

rc_visard

, then the latter can be selected from the

rc-visard

 drop-down menu. Otherwise, the

rc_visard

's MAC address, which is printed on the device label, can be entered
manually into the designated fields.

One of four options can be chosen after entering the MAC address:

Reset Parameters: Reset all rc_visard parameters, such as frame rate,
that are configurable via Web GUI\ (Section \ref{installation:sect-
web-gui}).

Reset Network: Reset network settings and user-defined name.

Reset All: Reset the rc_visard parameters as well as network settings
and user-defined name.

Switch Partitions: Allows a rollback to be performed as described in
Restoring the previous firmware version\:(Section \ref{maintenance
:sect-restoring-the-previous-firmware-version}).

A white status LED followed by a device reboot indicates a successful
reset. If no reaction is noticeable, the two minutes time slot may
have elapsed, requiring another reboot.

Note: The reset mechanism is only available for the first two
  minutes after startup.

Network configuration

The

rc_visard

 requires an Internet Protocol (

IP

) address for communication with other network devices. The IP address
must be unique in the local network, and can be set either manually
via a user-configurable persistent IP address, or automatically via

DHCP

. If none of these IP configuration methods apply, the

rc_visard

 falls back to a

Link-Local

 IP address.

Following the

GigE Vision

® standard, the priority of IP configuration methods on the

rc_visard

 is

   Persistent IP (if enabled)

   DHCP (if enabled)

   Link-Local


Options for changing the

rc_visard

's network settings and IP configuration are:

   the System tab of the rc_visard's Web GUI -- if it is reachable in
   the local network already, see Web GUI\:(Section \ref{installation
   :sect-web-gui})

   any configuration tool compatible with GigE Vision® 2.0 such as the
   IpConfigTool that exhibits a graphical user interface and is part
   of the Baumer GAPI SDK, or Roboception's command-line tool
   gc_config. Typically, these tools scan for all available GigE
   Vision® devices on the network. All rc_visard devices can be
   uniquely identified by their serial number and MAC address, which
   are both printed on the device.

   temporarily changing or completely resetting the rc_visard's
   network configuration via Roboception's rcdiscover-gui tool, see
   Discovery of rc_visard devices\:(Section \ref{installation:sect-
   discovery-of-rcvisard-devices})

Note: The Baumer

  SDK

   can be downloaded free of charge for Windows and Linux from

  http://www.baumer.com

  .

Note: The command-line tool "gc_config" is part of Roboception's
  open- source convenience layer "rc_genicam_api", which can be
  downloaded free of charge for Windows and Linux from

  http://www.roboception.com/download

  .

Host name

The

rc_visard

's host name is based on its serial number, which is printed on the
device, and is defined as "rc-visard-<serial number>".

Automatic configuration (factory default)

The Dynamic Host Configuration Protocol (

DHCP

) is preferred for setting an IP address. If DHCP is active on the

rc_visard

, which is the factory default, the device tries to contact a DHCP
server at startup and every time the network cable is being plugged
in. If a DHCP server is available on the network, the IP address is
automatically configured.

In some networks, the DHCP server is configured so that it only
accepts known devices. In this case, the Media Access Control address
(

MAC address

), which is printed on the device label, needs to be configured in the
DHCP server. At the same time, the

rc_visard

's host name can also be set in the Domain Name Server (

DNS

). Both MAC address and host name should be sent to the network
administrator for configuration.

If the

rc_visard

 cannot contact a DHCP server within about 15 seconds after startup,
or after plugging in the network cable, it assigns itself a unique IP
address. This process is called

Link-Local

. This option is especially useful for connecting the

rc_visard

 directly to a computer. The computer must be configured for Link-
Local as well. Link-Local might already be configured as a standard
fallback option, as it is under Windows 10. Other operating systems
such as Linux require Link-Local to be explicitly configured in their
network managers.

Manual configuration

Specifying a persistent, i.e. static IP address manually might be
useful in some cases. This address is stored on the

rc_visard

 to be used on device startup or network reconnection. Please make
sure the selected IP address, subnet mask and gateway will not cause
any conflicts on the network.

Warning: The IP address must be unique within the local network and
  within the local network's range of valid addresses. Furthermore,
  the subnet mask must match the local network; otherwise, the

  rc_visard

   may become inaccessible. This can be avoided by using automatic
  configuration as explained in

  Automatic configuration (factory default)

  .

If this IP address cannot be assigned, e.g. because it is already used
by another device in the network, IP configuration will fall back to
automatic configuration via

DHCP

 (if enabled) or a

Link-Local

 address.

Web GUI

The

rc_visard

's Web GUI can be used to test, calibrate, and configure the device.
It can be accessed from any web browser, such as Firefox, Google
Chrome, or Microsoft Edge, via the

rc_visard

's IP address. The easiest way to access the Web GUI is to simply
double click on the desired device using the "rcdiscover-gui" tool as
explained in

Discovery of rc_visard devices

.

Alternatively, some network environments automatically configure the
unique host name of the

rc_visard

 in their Domain Name Server (

DNS

). In this case, the Web GUI can also be accessed directly using the

URL

 "http://<host-name>" by replacing "<host-name>" with the device's
host name.

For Linux and Mac operating systems, this even works without DNS via
the multicast Domain Name System (

mDNS

), which is automatically used if ".local" is appended to the host
name. Thus, the URL simply becomes "http://<host-name>.local".

The Web GUI's overview page gives the most important information about
the device and the software components.


The page's top row permits access to the individual pages of the

rc_visard

's Web GUI:

Camera

   shows a live stream of the left and right rectified camera images.
   The frame rate can be reduced to save bandwidth when streaming to a
   GigE Vision® client. Furthermore, exposure can be set manually or
   automatically. See

   Parameters

    for more information.

Depth Image

   shows a live stream of the left rectified, depth, and confidence
   images. The page contains various settings for depth-image
   computation and filtering. See

   Parameters

    for more information.

Dynamics

   shows the location and movement of image features that are used to
   compute the

   rc_visard

   's egomotion. Settings include the number of corners and features
   that should be used. See

   Parameters

    for more information.

Camera Calibration

   permits the camera to be checked for proper calibration. In rare
   cases when the camera is no longer sufficiently calibrated,
   calibration also can be performed using this module. See

   Camera calibration

    for more information.

Hand-Eye-Calibration

   allows the computation of the static transformation between the
   camera and a coordinate system known in the robot system. This can
   be the flange coordinate system of a robotic arm if the camera is
   attached to the flange. Alternatively, the camera may be mounted
   statically in the robot environment and calibrated to any other
   static frame known in the robot system. See

   Hand-eye calibration

    for more information.

Modules

   gives access to the optional software components of the

   rc_visard

    (see

   Optional software components

   ).

Logs

   permits access to the log files on the

   rc_visard

   . The log files are typically checked if errors are suspected.

System

   gives access to general settings and device information, and
   permits the firmware or the license file to be updated.

Note: Changed parameters are not persistent and will be lost when
  restarting the

  rc_visard

   unless they are saved by pressing the

  Save

   button before leaving the corresponding page.

Note: Further information on all parameters in the Web GUI can be
  obtained by pressing the

  Info

   button next to each parameter.
